--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -2,8 +2,8 @@ name: 여주 뉴스 수집
 
 on:
   schedule:
-    - cron: '0 0,6,12,18 * * *'  # 매일 4번 (0시, 6시, 12시, 18시)
-  workflow_dispatch:  # 수동 실행
+    - cron: '0 0,6,12,18 * * *'
+  workflow_dispatch:
 
 jobs:
   collect-news:
@@ -11,58 +11,24 @@ jobs:
     
     steps:
       - name: 뉴스 수집 및 저장
-        uses: actions/github-script@v7
-        env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
-        with:
-          script: |
-            const fetch = require('node-fetch');
+        run: |
+          # 네이버 뉴스 검색
+          NEWS=$(curl -s "https://search.naver.com/search.naver?where=news&query=%EC%97%AC%EC%A3%BC%EC%8B%9C&sort=1" \
+            -H "User-Agent: Mozilla/5.0")
+          
+          # 뉴스 제목과 링크 추출 후 Supabase에 저장
+          echo "$NEWS" | grep -oP 'href="(https://n\.news\.naver\.com[^"]+)"[^>]*class="news_tit"[^>]*title="([^"]+)"' | head -10 | while read line; do
+            LINK=$(echo "$line" | grep -oP 'https://n\.news\.naver\.com[^"]+')
+            TITLE=$(echo "$line" | grep -oP 'title="[^"]+"' | sed 's/title="//;s/"$//')
             
-            // 네이버 뉴스 검색 (여주)
-            const searchUrl = 'https://search.naver.com/search.naver?where=news&query=여주시&sort=1';
-            
-            const response = await fetch(searchUrl, {
-              headers: {
-                'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36'
-              }
-            });
-            const html = await response.text();
-            
-            // 뉴스 파싱
-            const newsRegex = /<a href="(https:\/\/n\.news\.naver\.com[^"]+)"[^>]*class="news_tit"[^>]*title="([^"]+)"/g;
-            const sourceRegex = /<a[^>]*class="info press"[^>]*>([^<]+)<\/a>/g;
-            
-            const news = [];
-            let match;
-            
-            while ((match = newsRegex.exec(html)) !== null) {
-              news.push({
-                link: match[1],
-                title: match[2]
-              });
-            }
-            
-            // Supabase에 저장
-            const supabaseUrl = process.env.SUPABASE_URL;
-            const supabaseKey = process.env.SUPABASE_KEY;
-            
-            for (const item of news.slice(0, 10)) {
-              await fetch(`${supabaseUrl}/rest/v1/news`, {
-                method: 'POST',
-                headers: {
-                  'apikey': supabaseKey,
-                  'Authorization': `Bearer ${supabaseKey}`,
-                  'Content-Type': 'application/json',
-                  'Prefer': 'resolution=ignore-duplicates'
-                },
-                body: JSON.stringify({
-                  title: item.title,
-                  source: '네이버뉴스',
-                  link: item.link,
-                  published_at: new Date().toISOString()
-                })
-              });
-            }
-            
-            console.log(`${news.length}개 뉴스 수집 완료`);
+            if [ -n "$LINK" ] && [ -n "$TITLE" ]; then
+              curl -X POST "${{ secrets.SUPABASE_URL }}/rest/v1/news" \
+                -H "apikey: ${{ secrets.SUPABASE_KEY }}" \
+                -H "Authorization: Bearer ${{ secrets.SUPABASE_KEY }}" \
+                -H "Content-Type: application/json" \
+                -H "Prefer: resolution=ignore-duplicates" \
+                -d "{\"title\": \"$TITLE\", \"source\": \"네이버뉴스\", \"link\": \"$LINK\"}"
+            fi
+          done
+          
+          echo "뉴스 수집 완료"
