--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -31,16 +31,15 @@ jobs:
             # 링크 추출
             grep -oP '(?<=<link>)http[s]?://[^<]+' rss.xml > links.txt 2>/dev/null || true
             
-            count=$(wc -l < titles.txt)
-            echo "$name: $count개 기사 발견"
+            # 여주 관련 기사만 필터링
+            grep -n "여주" titles.txt > filtered.txt 2>/dev/null || true
+            
+            count=$(wc -l < filtered.txt 2>/dev/null || echo "0")
+            echo "$name: 여주 관련 $count개 기사 발견"
             
             # 저장
-            head -10 titles.txt > t.txt
-            head -10 links.txt > l.txt
-            
-            i=1
-            while IFS= read -r title; do
-              link=$(sed -n "${i}p" l.txt)
+            while IFS=: read -r linenum title; do
+              link=$(sed -n "${linenum}p" links.txt)
               if [ -n "$title" ] && [ -n "$link" ]; then
                 title=$(echo "$title" | sed 's/"/\\"/g' | tr -d '\n\r')
                 echo "저장: $title"
@@ -51,8 +50,7 @@ jobs:
                   -H "Prefer: resolution=ignore-duplicates" \
                   -d "{\"title\": \"${title}\", \"source\": \"${name}\", \"link\": \"${link}\"}" || true
               fi
-              i=$((i+1))
-            done < t.txt
+            done < filtered.txt
           }
           
           # 여주 지역 언론사들
